c4prj1_deck/grade.txt
Grading at Wed Jul 31 11:05:38 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:252:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void copy_straight(card_t ** to, deck_t *from, size_t ind, suit_t fs, size_t count) {
 ^
eval.c:277:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int find_straight(deck_t * hand, suit_t fs, hand_eval_t * ans) {
 ^
eval.c:309:1: error: ISO C forbids nested functions [-Werror=pedantic]
 hand_eval_t evaluate_hand(deck_t * hand) {
 ^
eval.c:377:1: error: expected declaration or statement at end of input
 }
 ^
eval.c:377:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
